; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_multi.c_Curl_multi_max_total_connections.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_multi.c_Curl_multi_max_total_connections.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Curl_multi = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @Curl_multi_max_total_connections(%struct.Curl_multi* %0) #0 {
  %2 = alloca %struct.Curl_multi*, align 8
  store %struct.Curl_multi* %0, %struct.Curl_multi** %2, align 8
  %3 = load %struct.Curl_multi*, %struct.Curl_multi** %2, align 8
  %4 = icmp ne %struct.Curl_multi* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load %struct.Curl_multi*, %struct.Curl_multi** %2, align 8
  %7 = getelementptr inbounds %struct.Curl_multi, %struct.Curl_multi* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  br label %10

9:                                                ; preds = %1
  br label %10

10:                                               ; preds = %9, %5
  %11 = phi i64 [ %8, %5 ], [ 0, %9 ]
  ret i64 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
